--- a/moray_bot/Dockerfile
+++ b/moray_bot/Dockerfile
@@ -1,9 +1,24 @@
-FROM ros:humble-desktop-full
+FROM osrf/ros:humble-desktop-full
+SHELL ["/bin/bash", "-c"]
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
+    gazebo \
     ros-humble-nav2* \
     ros-humble-robot-localization \
-    ros-humble-turtlebot3_gazebo 
+    ros-humble-turtlebot3-gazebo \
+    git 
 
-# Install additional packages
+# 
+RUN echo "export GAZEBO_MODEL_PATH=$GAZEBO_MODEL_PATH:/opt/ros/humble/share/turtlebot3_gazebo/models" >> ~/.bashrc
+
+# Clone the repo
+RUN mkdir -p /root/ws/src
+WORKDIR /root/ws/src
+RUN git clone https://github.com/jacodd/moray_bot.git
+WORKDIR /root/ws/
+RUN colcon build
+RUN echo "source /root/ws/install/setup.bash" >> ~/.bashrc
+
+# Run the simulation
+# CMD ["bash", "-c", "source ~/.bashrc && ros2 launch moray_bot gazebo_gps_world.launch.py && ros2 launch moray_bot gnss_waypoint_follower.launch.py"]
